[[bin]]
name = "peer"
path = "src/bin/peer/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[package]
name = "hole-punching"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
net = "0.1.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tun = "0.9.1"
