[[bin]]
name = "peer"
path = "src/bin/peer/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[package]
name = "hole-punching"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
futures = "0.3.30"
quinn = "0.10.2"
rcgen = "0.12.0"
rustls = "0.21.10"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "full"] }
